DiceRollerCs/Grammar/DiceGrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from DiceGrammar.g4 by ANTLR 4.7

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Dice.Grammar {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7")]
[System.CLSCompliant(false)]
public partial class DiceGrammarParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T_DIGIT_STRING=1, T_ALPHA_STRING=2, T_STRING=3, T_D=4, T_FUDGE=5, T_KEEP_HIGH=6, 
		T_KEEP_LOW=7, T_DROP_HIGH=8, T_DROP_LOW=9, T_ADVANTAGE=10, T_REROLL=11, 
		T_REROLL_ONCE=12, T_EXPLODE=13, T_PENETRATE=14, T_FAIL=15, T_EQUALS=16, 
		T_GREATER=17, T_LESS=18, T_GREATER_EQUALS=19, T_LESS_EQUALS=20, T_NOT_EQUALS=21, 
		T_LBRACE=22, T_RBRACE=23, T_LSQUARE=24, T_RSQUARE=25, T_COMMA=26, T_DOT=27, 
		T_LPAREN=28, T_RPAREN=29, T_PLUS=30, T_MINUS=31, T_MULTIPLY=32, T_DIVIDE=33, 
		WS=34;
	public const int
		RULE_input = 0, RULE_math_expr = 1, RULE_mult_expr = 2, RULE_add_expr = 3, 
		RULE_paren_expr = 4, RULE_number_expr = 5, RULE_number = 6, RULE_global_function = 7, 
		RULE_group_function = 8, RULE_basic_function = 9, RULE_grouped_roll = 10, 
		RULE_grouped_roll_inner = 11, RULE_grouped_extras = 12, RULE_basic_roll = 13, 
		RULE_basic_extras = 14, RULE_keep_expr = 15, RULE_reroll_expr = 16, RULE_explode_expr = 17, 
		RULE_success_expr = 18, RULE_compare_expr = 19, RULE_explicit_compare_expr = 20;
	public static readonly string[] ruleNames = {
		"input", "math_expr", "mult_expr", "add_expr", "paren_expr", "number_expr", 
		"number", "global_function", "group_function", "basic_function", "grouped_roll", 
		"grouped_roll_inner", "grouped_extras", "basic_roll", "basic_extras", 
		"keep_expr", "reroll_expr", "explode_expr", "success_expr", "compare_expr", 
		"explicit_compare_expr"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, "'d'", "'F'", "'kh'", "'kl'", "'dh'", "'dl'", 
		"'a'", "'r'", "'ro'", "'e'", "'p'", "'f'", "'='", "'>'", "'<'", "'>='", 
		"'<='", null, "'{'", "'}'", "'['", "']'", "','", "'.'", "'('", "')'", 
		"'+'", "'-'", "'*'", "'/'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "T_DIGIT_STRING", "T_ALPHA_STRING", "T_STRING", "T_D", "T_FUDGE", 
		"T_KEEP_HIGH", "T_KEEP_LOW", "T_DROP_HIGH", "T_DROP_LOW", "T_ADVANTAGE", 
		"T_REROLL", "T_REROLL_ONCE", "T_EXPLODE", "T_PENETRATE", "T_FAIL", "T_EQUALS", 
		"T_GREATER", "T_LESS", "T_GREATER_EQUALS", "T_LESS_EQUALS", "T_NOT_EQUALS", 
		"T_LBRACE", "T_RBRACE", "T_LSQUARE", "T_RSQUARE", "T_COMMA", "T_DOT", 
		"T_LPAREN", "T_RPAREN", "T_PLUS", "T_MINUS", "T_MULTIPLY", "T_DIVIDE", 
		"WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "DiceGrammar.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static DiceGrammarParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public DiceGrammarParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public DiceGrammarParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class InputContext : ParserRuleContext {
		public Math_exprContext math_expr() {
			return GetRuleContext<Math_exprContext>(0);
		}
		public InputContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_input; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDiceGrammarListener typedListener = listener as IDiceGrammarListener;
			if (typedListener != null) typedListener.EnterInput(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDiceGrammarListener typedListener = listener as IDiceGrammarListener;
			if (typedListener != null) typedListener.ExitInput(this);
		}
	}

	[RuleVersion(0)]
	public InputContext input() {
		InputContext _localctx = new InputContext(Context, State);
		EnterRule(_localctx, 0, RULE_input);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 42; math_expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Math_exprContext : ParserRuleContext {
		public Math_exprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_math_expr; } }
	 
		public Math_exprContext() { }
		public virtual void CopyFrom(Math_exprContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class MathFunctionContext : Math_exprContext {
		public Global_functionContext global_function() {
			return GetRuleContext<Global_functionContext>(0);
		}
		public MathFunctionContext(Math_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IDiceGrammarListener typedListener = listener as IDiceGrammarListener;
			if (typedListener != null) typedListener.EnterMathFunction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDiceGrammarListener typedListener = listener as IDiceGrammarListener;
			if (typedListener != null) typedListener.ExitMathFunction(this);
		}
	}
	public partial class MathNormalContext : Math_exprContext {
		public Mult_exprContext mult_expr() {
			return GetRuleContext<Mult_exprContext>(0);
		}
		public MathNormalContext(Math_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IDiceGrammarListener typedListener = listener as IDiceGrammarListener;
			if (typedListener != null) typedListener.EnterMathNormal(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDiceGrammarListener typedListener = listener as IDiceGrammarListener;
			if (typedListener != null) typedListener.ExitMathNormal(this);
		}
	}

	[RuleVersion(0)]
	public Math_exprContext math_expr() {
		Math_exprContext _localctx = new Math_exprContext(Context, State);
		EnterRule(_localctx, 2, RULE_math_expr);
		try {
			State = 46;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T_DIGIT_STRING:
			case T_LBRACE:
			case T_LSQUARE:
			case T_LPAREN:
			case T_MINUS:
				_localctx = new MathNormalContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 44; mult_expr(0);
				}
				break;
			case T_ALPHA_STRING:
				_localctx = new MathFunctionContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 45; global_function();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Mult_exprContext : ParserRuleContext {
		public Mult_exprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_mult_expr; } }
	 
		public Mult_exprContext() { }
		public virtual void CopyFrom(Mult_exprContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class MultMultContext : Mult_exprContext {
		public Mult_exprContext mult_expr() {
			return GetRuleContext<Mult_exprContext>(0);
		}
		public ITerminalNode T_MULTIPLY() { return GetToken(DiceGrammarParser.T_MULTIPLY, 0); }
		public Add_exprContext add_expr() {
			return GetRuleContext<Add_exprContext>(0);
		}
		public MultMultContext(Mult_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IDiceGrammarListener typedListener = listener as IDiceGrammarListener;
			if (typedListener != null) typedListener.EnterMultMult(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDiceGrammarListener typedListener = listener as IDiceGrammarListener;
			if (typedListener != null) typedListener.ExitMultMult(this);
		}
	}
	public partial class MultNoneContext : Mult_exprContext {
		public Add_exprContext add_expr() {
			return GetRuleContext<Add_exprContext>(0);
		}
		public MultNoneContext(Mult_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IDiceGrammarListener typedListener = listener as IDiceGrammarListener;
			if (typedListener != null) typedListener.EnterMultNone(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDiceGrammarListener typedListener = listener as IDiceGrammarListener;
			if (typedListener != null) typedListener.ExitMultNone(this);
		}
	}
	public partial class MultDivContext : Mult_exprContext {
		public Mult_exprContext mult_expr() {
			return GetRuleContext<Mult_exprContext>(0);
		}
		public ITerminalNode T_DIVIDE() { return GetToken(DiceGrammarParser.T_DIVIDE, 0); }
		public Add_exprContext add_expr() {
			return GetRuleContext<Add_exprContext>(0);
		}
		public MultDivContext(Mult_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IDiceGrammarListener typedListener = listener as IDiceGrammarListener;
			if (typedListener != null) typedListener.EnterMultDiv(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDiceGrammarListener typedListener = listener as IDiceGrammarListener;
			if (typedListener != null) typedListener.ExitMultDiv(this);
		}
	}

	[RuleVersion(0)]
	public Mult_exprContext mult_expr() {
		return mult_expr(0);
	}

	private Mult_exprContext mult_expr(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		Mult_exprContext _localctx = new Mult_exprContext(Context, _parentState);
		Mult_exprContext _prevctx = _localctx;
		int _startState = 4;
		EnterRecursionRule(_localctx, 4, RULE_mult_expr, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new MultNoneContext(_localctx);
			Context = _localctx;
			_prevctx = _localctx;

			State = 49; add_expr(0);
			}
			Context.Stop = TokenStream.LT(-1);
			State = 59;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 57;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
					case 1:
						{
						_localctx = new MultMultContext(new Mult_exprContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_mult_expr);
						State = 51;
						if (!(Precpred(Context, 3))) throw new FailedPredicateException(this, "Precpred(Context, 3)");
						State = 52; Match(T_MULTIPLY);
						State = 53; add_expr(0);
						}
						break;
					case 2:
						{
						_localctx = new MultDivContext(new Mult_exprContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_mult_expr);
						State = 54;
						if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
						State = 55; Match(T_DIVIDE);
						State = 56; add_expr(0);
						}
						break;
					}
					} 
				}
				State = 61;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class Add_exprContext : ParserRuleContext {
		public Add_exprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_add_expr; } }
	 
		public Add_exprContext() { }
		public virtual void CopyFrom(Add_exprContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class AddSubContext : Add_exprContext {
		public Add_exprContext add_expr() {
			return GetRuleContext<Add_exprContext>(0);
		}
		public ITerminalNode T_MINUS() { return GetToken(DiceGrammarParser.T_MINUS, 0); }
		public Paren_exprContext paren_expr() {
			return GetRuleContext<Paren_exprContext>(0);
		}
		public AddSubContext(Add_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IDiceGrammarListener typedListener = listener as IDiceGrammarListener;
			if (typedListener != null) typedListener.EnterAddSub(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDiceGrammarListener typedListener = listener as IDiceGrammarListener;
			if (typedListener != null) typedListener.ExitAddSub(this);
		}
	}
	public partial class AddNoneContext : Add_exprContext {
		public Paren_exprContext paren_expr() {
			return GetRuleContext<Paren_exprContext>(0);
		}
		public AddNoneContext(Add_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IDiceGrammarListener typedListener = listener as IDiceGrammarListener;
			if (typedListener != null) typedListener.EnterAddNone(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDiceGrammarListener typedListener = listener as IDiceGrammarListener;
			if (typedListener != null) typedListener.ExitAddNone(this);
		}
	}
	public partial class AddAddContext : Add_exprContext {
		public Add_exprContext add_expr() {
			return GetRuleContext<Add_exprContext>(0);
		}
		public ITerminalNode T_PLUS() { return GetToken(DiceGrammarParser.T_PLUS, 0); }
		public Paren_exprContext paren_expr() {
			return GetRuleContext<Paren_exprContext>(0);
		}
		public AddAddContext(Add_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IDiceGrammarListener typedListener = listener as IDiceGrammarListener;
			if (typedListener != null) typedListener.EnterAddAdd(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDiceGrammarListener typedListener = listener as IDiceGrammarListener;
			if (typedListener != null) typedListener.ExitAddAdd(this);
		}
	}

	[RuleVersion(0)]
	public Add_exprContext add_expr() {
		return add_expr(0);
	}

	private Add_exprContext add_expr(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		Add_exprContext _localctx = new Add_exprContext(Context, _parentState);
		Add_exprContext _prevctx = _localctx;
		int _startState = 6;
		EnterRecursionRule(_localctx, 6, RULE_add_expr, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new AddNoneContext(_localctx);
			Context = _localctx;
			_prevctx = _localctx;

			State = 63; paren_expr();
			}
			Context.Stop = TokenStream.LT(-1);
			State = 73;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 71;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
					case 1:
						{
						_localctx = new AddAddContext(new Add_exprContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_add_expr);
						State = 65;
						if (!(Precpred(Context, 3))) throw new FailedPredicateException(this, "Precpred(Context, 3)");
						State = 66; Match(T_PLUS);
						State = 67; paren_expr();
						}
						break;
					case 2:
						{
						_localctx = new AddSubContext(new Add_exprContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_add_expr);
						State = 68;
						if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
						State = 69; Match(T_MINUS);
						State = 70; paren_expr();
						}
						break;
					}
					} 
				}
				State = 75;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class Paren_exprContext : ParserRuleContext {
		public Paren_exprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_paren_expr; } }
	 
		public Paren_exprContext() { }
		public virtual void CopyFrom(Paren_exprContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ParenNumberContext : Paren_exprContext {
		public NumberContext number() {
			return GetRuleContext<NumberContext>(0);
		}
		public ParenNumberContext(Paren_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IDiceGrammarListener typedListener = listener as IDiceGrammarListener;
			if (typedListener != null) typedListener.EnterParenNumber(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDiceGrammarListener typedListener = listener as IDiceGrammarListener;
			if (typedListener != null) typedListener.ExitParenNumber(this);
		}
	}
	public partial class ParenParenContext : Paren_exprContext {
		public ITerminalNode T_LPAREN() { return GetToken(DiceGrammarParser.T_LPAREN, 0); }
		public Math_exprContext math_expr() {
			return GetRuleContext<Math_exprContext>(0);
		}
		public ITerminalNode T_RPAREN() { return GetToken(DiceGrammarParser.T_RPAREN, 0); }
		public ParenParenContext(Paren_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IDiceGrammarListener typedListener = listener as IDiceGrammarListener;
			if (typedListener != null) typedListener.EnterParenParen(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDiceGrammarListener typedListener = listener as IDiceGrammarListener;
			if (typedListener != null) typedListener.ExitParenParen(this);
		}
	}
	public partial class ParenGroupContext : Paren_exprContext {
		public Grouped_rollContext grouped_roll() {
			return GetRuleContext<Grouped_rollContext>(0);
		}
		public ParenGroupContext(Paren_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IDiceGrammarListener typedListener = listener as IDiceGrammarListener;
			if (typedListener != null) typedListener.EnterParenGroup(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDiceGrammarListener typedListener = listener as IDiceGrammarListener;
			if (typedListener != null) typedListener.ExitParenGroup(this);
		}
	}

	[RuleVersion(0)]
	public Paren_exprContext paren_expr() {
		Paren_exprContext _localctx = new Paren_exprContext(Context, State);
		EnterRule(_localctx, 8, RULE_paren_expr);
		try {
			State = 82;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				_localctx = new ParenParenContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 76; Match(T_LPAREN);
				State = 77; math_expr();
				State = 78; Match(T_RPAREN);
				}
				break;
			case 2:
				_localctx = new ParenNumberContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 80; number();
				}
				break;
			case 3:
				_localctx = new ParenGroupContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 81; grouped_roll();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Number_exprContext : ParserRuleContext {
		public Number_exprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_number_expr; } }
	 
		public Number_exprContext() { }
		public virtual void CopyFrom(Number_exprContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class NexprParenContext : Number_exprContext {
		public ITerminalNode T_LPAREN() { return GetToken(DiceGrammarParser.T_LPAREN, 0); }
		public Math_exprContext math_expr() {
			return GetRuleContext<Math_exprContext>(0);
		}
		public ITerminalNode T_RPAREN() { return GetToken(DiceGrammarParser.T_RPAREN, 0); }
		public NexprParenContext(Number_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IDiceGrammarListener typedListener = listener as IDiceGrammarListener;
			if (typedListener != null) typedListener.EnterNexprParen(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDiceGrammarListener typedListener = listener as IDiceGrammarListener;
			if (typedListener != null) typedListener.ExitNexprParen(this);
		}
	}
	public partial class NexprNumberContext : Number_exprContext {
		public NumberContext number() {
			return GetRuleContext<NumberContext>(0);
		}
		public NexprNumberContext(Number_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IDiceGrammarListener typedListener = listener as IDiceGrammarListener;
			if (typedListener != null) typedListener.EnterNexprNumber(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDiceGrammarListener typedListener = listener as IDiceGrammarListener;
			if (typedListener != null) typedListener.ExitNexprNumber(this);
		}
	}

	[RuleVersion(0)]
	public Number_exprContext number_expr() {
		Number_exprContext _localctx = new Number_exprContext(Context, State);
		EnterRule(_localctx, 10, RULE_number_expr);
		try {
			State = 89;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T_LPAREN:
				_localctx = new NexprParenContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 84; Match(T_LPAREN);
				State = 85; math_expr();
				State = 86; Match(T_RPAREN);
				}
				break;
			case T_DIGIT_STRING:
			case T_LSQUARE:
			case T_MINUS:
				_localctx = new NexprNumberContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 88; number();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NumberContext : ParserRuleContext {
		public NumberContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_number; } }
	 
		public NumberContext() { }
		public virtual void CopyFrom(NumberContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class NumberMacroContext : NumberContext {
		public ITerminalNode T_LSQUARE() { return GetToken(DiceGrammarParser.T_LSQUARE, 0); }
		public ITerminalNode T_STRING() { return GetToken(DiceGrammarParser.T_STRING, 0); }
		public ITerminalNode T_RSQUARE() { return GetToken(DiceGrammarParser.T_RSQUARE, 0); }
		public NumberMacroContext(NumberContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IDiceGrammarListener typedListener = listener as IDiceGrammarListener;
			if (typedListener != null) typedListener.EnterNumberMacro(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDiceGrammarListener typedListener = listener as IDiceGrammarListener;
			if (typedListener != null) typedListener.ExitNumberMacro(this);
		}
	}
	public partial class NumberLiteralContext : NumberContext {
		public ITerminalNode T_DIGIT_STRING() { return GetToken(DiceGrammarParser.T_DIGIT_STRING, 0); }
		public ITerminalNode T_MINUS() { return GetToken(DiceGrammarParser.T_MINUS, 0); }
		public NumberLiteralContext(NumberContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IDiceGrammarListener typedListener = listener as IDiceGrammarListener;
			if (typedListener != null) typedListener.EnterNumberLiteral(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDiceGrammarListener typedListener = listener as IDiceGrammarListener;
			if (typedListener != null) typedListener.ExitNumberLiteral(this);
		}
	}

	[RuleVersion(0)]
	public NumberContext number() {
		NumberContext _localctx = new NumberContext(Context, State);
		EnterRule(_localctx, 12, RULE_number);
		int _la;
		try {
			State = 98;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T_DIGIT_STRING:
			case T_MINUS:
				_localctx = new NumberLiteralContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 92;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T_MINUS) {
					{
					State = 91; Match(T_MINUS);
					}
				}
